--- a/lettings/templates/lettings/index.html
+++ b/lettings/templates/lettings/index.html
@@ -18,7 +18,7 @@
                     <ul class="list-group list-group-flush list-group-careers">
                         {% for letting in lettings_list %}
                             <li class="list-group-item">
-                                <a href="{% url 'letting' letting_id=letting.id %}">{{ letting.title }}</a>
+                                <a href="{% url 'lettings:detail' letting_id=letting.id %}">{{ letting.title }}</a>
                             </li>
                         {% endfor %}
                     </ul>
@@ -32,8 +32,7 @@
         <div class="justify-content-center">
             <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'index' %}">Home</a>
             <a class="btn fw-500 ms-lg-4 btn-primary px-10"
-               href="{% url 'profiles_index' %}">Profiles</a>
+               href="{% url 'profiles:index' %}">Profiles</a>
         </div>
     </div>
 {% endblock %}
-
