--- a/lettings/templates/lettings/letting.html
+++ b/lettings/templates/lettings/letting.html
@@ -26,14 +26,13 @@
     <div class="container px-5 py-5 text-center">
         <div class="justify-content-center">
             <a class="btn fw-500 ms-lg-4 btn-primary px-10"
-               href="{% url 'lettings_index' %}">
+               href="{% url 'lettings:index' %}">
                 <i class="ms-2" data-feather="arrow-right"></i>
                 Back
             </a>
             <a class="btn fw-500 ms-lg-4 btn-primary px-10" href="{% url 'index' %}">Home</a>
             <a class="btn fw-500 ms-lg-4 btn-primary px-10"
-               href="{% url 'profiles_index' %}">Profiles</a>
+               href="{% url 'profiles:index' %}">Profiles</a>
         </div>
     </div>
 {% endblock %}
-
