--- a/oc_lettings_site/templates/base.html
+++ b/oc_lettings_site/templates/base.html
@@ -13,6 +13,7 @@
             {% endblock title %}
         </title>
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/custom-style.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="icon"
               type="image/x-icon"
@@ -79,4 +80,3 @@
         </script>
     </body>
 </html>
-
