--- a/src/oc_lettings_site/templates/index.html
+++ b/src/oc_lettings_site/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Holiday Homes
+    OC Lettings | Holiday Homes
 {% endblock title %}
 {% block content %}
     <div class="container px-5 py-5 text-center">
@@ -19,4 +19,3 @@
         </div>
     </div>
 {% endblock %}
-
