--- a/src/oc_lettings_site/templates/base.html
+++ b/src/oc_lettings_site/templates/base.html
@@ -56,7 +56,7 @@
                     <div class="container px-5">
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Orange County Lettings 2023</div>
+                            <div class="col-md-6 small">Copyright &copy; Orange County Lettings {% now "Y" %}</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
